[CHG] run `git dfa` in background

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,7 +13,7 @@
 	config-remove-github = config --remove-section github
 	depth = rev-parse --show-cdup
 	df = diff
-	dfa = !`git config diff.guitool` .
+	dfa = !`git config diff.guitool` . &
 	pom = push origin master
 	pr = pull --rebase
 	root = !pwd
