changed email address

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Ryan Sullivan
-	email = ryan@ryansullivan.name
+	email = ryan@ryansully.com
 [core]
 	excludesfile = ~/.dotfiles/gitignore
 [alias]
