--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,7 @@
 	root = !pwd
 	scrap = !git reset --hard && git clean -df
 	st = status
+	undo = reset --soft HEAD^
 	unstage = reset HEAD
 [color]
 	ui = true
