--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
 	po = push origin
 	pom = push origin master
 	pr = pull --rebase
+	prs = !git pull --rebase && git submodule update
 	root = !pwd
 	scrap = !git reset --hard && git clean -df
 	st = status
