Add `git sync` alias to sync fork with upstream
https://help.github.com/articles/syncing-a-fork/

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@
 	root = !pwd
 	scrap = !git reset --hard && git clean -df
 	st = status
+	sync = !"git fetch upstream; git checkout master; git merge upstream/master"
 	undo = reset --soft HEAD^
 	unstage = reset HEAD
 [color]
