--- a/.gitconfig
+++ b/.gitconfig
@@ -33,7 +33,7 @@
 	ui = true
 [core]
 	editor = vim
-	excludesfile = ~/.dotfiles/gitignore
+	excludesfile = ~/.dotfiles/.gitignore_global
 [diff]
 	guitool = meld
 [instaweb]
