Update Sublime Text configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-Package Control.*
-!Package Control.sublime-settings
-SublimeMRU.sublime-settings
-*.cache
-*.tmTheme
-Color Highlighter
-.SublimeREPLHistory
 .vim/plugged
+
+Sublimerge*
+*.tmTheme
+# Package control specific files
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
+Package Control.merged-ca-bundle
+Package Control.user-ca-bundle
+oscrypto-ca-bundle.crt
+bh_unicode_properties.cache
