--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Package Control.merged-ca-bundle
 Package Control.user-ca-bundle
 oscrypto-ca-bundle.crt
 bh_unicode_properties.cache
+
+neofetch/ascii.local
