Configure SSH settings

--- a/ssh/config
+++ b/ssh/config
@@ -4,4 +4,9 @@ AddKeysToAgent yes
 IdentityFile ~/.ssh/id_rsa
 UseKeychain yes
 
-Include ~/.ssh/config.local
+Host *
+  ControlMaster auto
+  ControlPath ~/.ssh/sockets/%r@%h-%p
+  ControlPersist 5
+
+Include ~/.ssh/config.d/*
