--- a/install/Brewfile
+++ b/install/Brewfile
@@ -39,7 +39,7 @@ cask "discord"
 cask "dropbox"
 cask "firefox"
 cask "font-fira-code"
-cask "font-firacode-nerd-font"
+cask "font-fira-code-nerd-font"
 cask "font-source-code-pro"
 cask "google-chrome"
 cask "hyper"
