Update homebrew packages

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -25,7 +25,6 @@ brew "rbenv"
 brew "ripgrep"
 brew "socat"
 brew "sphinx-doc"
-brew "sshrc"
 brew "tmux"
 brew "unar"
 brew "vim"
@@ -45,7 +44,7 @@ cask "google-chrome"
 cask "hyper"
 cask "iterm2"
 cask "itsycal"
-cask "marshallofsound-google-play-music-player"
+cask "menumeters"
 cask "mixxx"
 cask "slack"
 cask "spectacle"
