Create git alias for interactive rebase

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,7 @@
 	pur = !"git fetch origin -v; git fetch upstream -v; git rebase upstream"
 	purs = !"git fetch origin -v; git fetch upstream -v; git rebase upstream; git submodule update --rebase"
 	pushf = push --force-with-lease
+	rbi = rebase -i origin/master
 	root = !pwd
 	scrap = !git reset --hard && git clean -df
 	st = status
