--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,10 +1,7 @@
 # run `brew bundle dump --force` to regenerate this list
 
 tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 
 brew "bash"
 brew "bash-completion@2"
@@ -19,7 +16,7 @@ brew "git"
 brew "go"
 brew "mas"
 brew "neofetch"
-brew "node@14"
+brew "node@22"
 brew "openssl@1.1"
 brew "rbenv"
 brew "ripgrep"
@@ -53,7 +50,7 @@ cask "steam"
 cask "sublime-text"
 cask "virtualbox"
 cask "visual-studio-code"
-cask "visual-studio-code-insiders"
+cask "visual-studio-code@insiders"
 cask "vlc"
 cask "webpack-dashboard"
 
@@ -65,3 +62,27 @@ mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Xcode", id: 497799835
+
+vscode "compulim.vscode-clock"
+vscode "dbaeumer.vscode-eslint"
+vscode "dsznajder.es7-react-js-snippets"
+vscode "eamodio.gitlens"
+vscode "hoovercj.vscode-power-mode"
+vscode "ibm.output-colorizer"
+vscode "icrawl.discord-vscode"
+vscode "johnpapa.vscode-peacock"
+vscode "kamikillerto.vscode-colorize"
+vscode "max-ss.cyberpunk"
+vscode "ms-vscode.js-debug"
+vscode "ms-vscode.live-server"
+vscode "ms-vscode-remote.vscode-remote-extensionpack"
+vscode "ms-vsliveshare.vsliveshare-pack"
+vscode "mutantdino.resourcemonitor"
+vscode "oderwat.indent-rainbow"
+vscode "orta.vscode-jest"
+vscode "pflannery.vscode-versionlens"
+vscode "pkief.material-icon-theme"
+vscode "pnp.polacode"
+vscode "ryu1kn.partial-diff"
+vscode "stylelint.vscode-stylelint"
+vscode "webrender.synthwave-x-fluoromachine"
