Change SSH config to use Ed25519 key

--- a/ssh/config
+++ b/ssh/config
@@ -1,7 +1,7 @@
 IgnoreUnknown AddKeysToAgent,UseKeychain
 
 AddKeysToAgent yes
-IdentityFile ~/.ssh/id_rsa
+IdentityFile ~/.ssh/id_ed25519
 UseKeychain yes
 
 Include ~/.ssh/config.d/*
